# ssh-config-mgr

./: .gitignore  SSH_Config_Master_产品文档.md  package-lock.json  package.json  run.sh  vite.config.ts
.github/workflows/: build-windows.yml  release.yml
src/: App.tsx  i18n.ts  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  database.db  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export_commands.rs  group_commands.rs  host_commands.rs  import_commands.rs  launch_commands.rs  mod.rs  network_commands.rs  remote_sync_commands.rs  sync_commands.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: group.rs  host.rs  mod.rs
src/components/: AddHostDialog.tsx  Icons.tsx  MainContent.tsx  Sidebar.tsx  StatusBar.tsx
