[package]
name = "ssh-config-mgr"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ssh_config_mgr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
clap = { version = "4.5.4", features = ["derive"] }
aes-gcm = "0.10.3"
argon2 = "0.5.3"
rand = "0.8.5"
log = "0.4.21"
env_logger = "0.11.3"
anyhow = "1.0.82"
thiserror = "1.0.59"
directories = "5.0.1"
tauri-plugin-shell = "2.3.5"

